# powertools-type-error-example

./: README.md  extending_builtin_models.py  pyproject.toml
