[tool.poetry]
name = "powertools-type-error-example"
version = "0.1.0"
description = ""
authors = ["Clayton Yochum <claytonjy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = {extras = ["pydantic"], version = "^1.22.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[tool.poetry.extras]
pydantic = ["aws-lambda-powertools"]

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
